# quebec-tax-app

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/calculators/: capital_gains.py  cca.py  keep_scenario.py  sell_scenario.py  tax.py  tax_config.py
backend/app/graph/: graph.py  nodes.py  state.py
backend/app/models/: schemas.py
backend/tests/: __init__.py  test_capital_gains_cca.py  test_scenarios.py  test_tax.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWindow.tsx  ComparisonChart.tsx  PropertyForm.tsx  QuestionCard.tsx  ResultsPanel.tsx
frontend/src/hooks/: useCalculate.ts  useSession.ts
frontend/src/types/: api.ts
